log
Sun, Mar 16, 2025 10:28:25 AM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Sun, Mar 16, 2025 10:30:26 AM: 
 exercises.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:48:38: error: invalid application of 'sizeof' to incomplete type 'List {aka struct List}'
       L = (List *) realloc(L, sizeof(List) * i) ;
                                      ^~~~
Compilation failed
20110d8
Sun, Mar 16, 2025 10:36:57 AM: 
 exercises.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:48:38: error: invalid application of 'sizeof' to incomplete type 'List {aka struct List}'
       L = (List *) realloc(L, sizeof(List) * i) ;
                                      ^~~~
Compilation failed
823d631
Sun, Mar 16, 2025 10:37:09 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
6da1f5b
Sun, Mar 16, 2025 10:54:21 AM: 
 exercises.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:51:4: error: expected ';' before '}' token
    }
    ^
Compilation failed
acd190e
Sun, Mar 16, 2025 10:54:35 AM: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  1|4
total_score: 10/70
f3c6248
Sun, Mar 16, 2025 11:01:54 AM: 
 exercises.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:64:16: error: dereferencing pointer to incomplete type 'List {aka struct List}'
       suma += L->data[i] ;
                ^~
Compilation failed
4b4164b
Sun, Mar 16, 2025 11:10:36 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:64:16: error: dereferencing pointer to incomplete type 'List {aka struct List}'
       suma += (*L)->data[i]
                ^~
exercises.c:65:4: error: expected ';' before '}' token
    }
    ^
Compilation failed
ad91dca
